Incluido scroll pelo celular

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="logo">
             <h1>Dennis Py</h1>
             <div class="contact-icons">
-                <a href="mailto:dennispy14@hotmail.com"><i class="fas fa-envelope"></i></a>
-                <a href="https://wa.me/51985501811"><i class="fab fa-whatsapp"></i></a>
+                <a href="mailto:dennispy14@hotmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://wa.me/5551985501811" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
 
@@ -39,6 +39,7 @@
             <div class="bar"></div>
         </div>
     </nav>
+
     <div class="section">
         <div class="content" id="inicio">
             <div class="falling-text">
@@ -141,7 +142,6 @@
     <footer class="footer">
         <p>© 2023 Meu Portfólio de Desenvolvimento | Todos os direitos reservados</p>
     </footer>
-
 </body>
 
 </html>
