Corrigido erro que não mostrava a section inicial

--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
     </div>
     <div class="section">
         <div id="sobre" class="content">
-
-            <div class="about-text">
-                <h2>Sobre Mim</h2>
-                <div class="intro">
-                    <p>Olá! Sou um Desenvolvedor FullStack. Minha paixão pela tecnologia me levou a
-                        aprofundar meus conhecimentos em linguagens como Java e JavaScript, capacitando-me para
-                        criar aplicações
-                        web eficientes e amigáveis aos usuários.</p>
+            <a href="#sobre" style="text-decoration: none; color:black;">
+                <div class="about-text">
+                    <h2>Sobre Mim</h2>
+                    <div class="intro">
+                        <p>Olá! Sou um Desenvolvedor FullStack. Minha paixão pela tecnologia me levou a
+                            aprofundar meus conhecimentos em linguagens como Java e JavaScript, capacitando-me para
+                            criar aplicações
+                            web eficientes e amigáveis aos usuários.</p>
+                    </div>
+                    <div class="about">
+                        <p>Sou apaixonado por explorar novas tecnologias e tendências no campo do desenvolvimento
+                            de software. Além do meu trabalho, gosto de tocar violão, jogar e aprofundar meus
+                            conhecimentos em diversas
+                            áreas.</p>
+                    </div>
+                    <div class="contact">
+                        <p>Se você procura um desenvolvedor com foco em resultados e com um desejo constante de
+                            aprendizado, estou
+                            pronto para contribuir e crescer profissionalmente.</p>
+                    </div>
                 </div>
-                <div class="about">
-                    <p>Sou apaixonado por explorar novas tecnologias e tendências no campo do desenvolvimento
-                        de software. Além do meu trabalho, gosto de tocar violão, jogar e aprofundar meus
-                        conhecimentos em diversas
-                        áreas.</p>
-                </div>
-                <div class="contact">
-                    <p>Se você procura um desenvolvedor com foco em resultados e com um desejo constante de
-                        aprendizado, estou
-                        pronto para contribuir e crescer profissionalmente.</p>
-                </div>
-            </div>
-
+            </a>
 
         </div>
     </div>
